--- a/_data/thumbnail.yml
+++ b/_data/thumbnail.yml
@@ -2,4 +2,6 @@ gravatar:           "https://avatars2.githubusercontent.com/u/44851191?s=500&d=m
 tryhackme:          "https://tryhackme.com/img/logo/thm_logo_circle.png"
 ctflearn:           "https://pbs.twimg.com/profile_images/1085658905009520640/s4_cRLYH.jpg"
 nahamcon:           "https://i.imgur.com/0EGKrZX.png"
-redpwnctf:             "https://i.imgur.com/hE3Cc7M.png"
+redpwnctf:          "https://i.imgur.com/hE3Cc7M.png"
+
+nmap:              "https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRWC2GdRur4ImWT6yMzTsP3LDbb-XqGNBQk9Q&usqp=CAU"
