--- a/_data/thumbnail.yml
+++ b/_data/thumbnail.yml
@@ -4,4 +4,7 @@ ctflearn:           "https://pbs.twimg.com/profile_images/1085658905009520640/s4
 nahamcon:           "https://i.imgur.com/0EGKrZX.png"
 redpwnctf:          "https://i.imgur.com/hE3Cc7M.png"
 
-nmap:              "https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRWC2GdRur4ImWT6yMzTsP3LDbb-XqGNBQk9Q&usqp=CAU"
+defense:            "https://image.flaticon.com/icons/svg/929/929429.svg"
+
+nmap:               "https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRWC2GdRur4ImWT6yMzTsP3LDbb-XqGNBQk9Q&usqp=CAU"
+hydra:              "https://i2.wp.com/securitytutorials.co.uk/wp-content/uploads/2017/04/xhydra.png?fit=512%2C512&ssl=1"
