--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ google_analytics: "UA-167321483-1"
 disqus_account: noxtal-com
 github_repository: https://github.com/Noxtal/noxtal.com
 addthis_id: ra-5f07cbdc7e5d39c3
+adsense: ca-pub-6140612341069656
 post_limit: 5
 
 # Social usernames/URLs
