H@cktivityCon Template Shack

--- a/_data/thumbnail.yml
+++ b/_data/thumbnail.yml
@@ -3,6 +3,7 @@ tryhackme:          "https://tryhackme.com/img/logo/thm_logo_circle.png"
 ctflearn:           "https://pbs.twimg.com/profile_images/1085658905009520640/s4_cRLYH.jpg"
 nahamcon:           "https://i.imgur.com/0EGKrZX.png"
 redpwnctf:          "https://i.imgur.com/hE3Cc7M.png"
+hacktivitycon:      "https://www.hackerone.com/sites/default/files/hacktivitycon-logo.png"
 
 defense:            "https://image.flaticon.com/icons/svg/929/929429.svg"
 
