cyberworld to blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Noxtal's Cyberworld"
+title: "Noxtal's Blog"
 email: contact.noxtal@gmail.com
 description: "Hey, I'm Noxtal! I'm a young CTF player and pentester, come check out my blog. On it, I post about everything I like but mostly detailed writeups about cybersecurity challenges I liked for beginners to learn."
 baseurl: ""
